<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSVTransportSE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_dialog">SearchDialog</string>
    <string name="exit"> Exit </string>
    <string name="materialNo">MaterialNo</string>
    <string name="materialName">MaterialName</string>
    <string name="namn">Namn:</string>
    <string name="name">name</string>
    <string name="registreringsnummer">Registreringsnummer:</string>
    <string name="reg">reg</string>
    <string name="produktinformation">Produktinformation:</string>
    <string name="product">product</string>
    <string name="godkänn">Godkänn</string>
    <string name="redigera">Redigera</string>
    <string name="RegNo">RegNo</string>
    <string name="Name">Name</string>
    <string name="soeg">Sök här...</string>
    <string name="OK">OK</string>
    <string name="avbryt">Avbryt</string>

</resources>